--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Components/Layout/TopMenu.razor
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Components/Layout/TopMenu.razor
@@ -4,7 +4,7 @@
     <BarMenu>
         <BarEnd>
             <BarItem>
-                <BarLink To="https://github.com/Megabit/Blazorise">GitHub</BarLink>
+                <AccessControl />
             </BarItem>
         </BarEnd>
     </BarMenu>
