--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Pages/DeadLetterCorrectorsPage.razor
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Pages/DeadLetterCorrectorsPage.razor
@@ -1,5 +1,6 @@
 ﻿@using MessageSilo.BlazorApp.Components.DeadLetterCorrector
 @page "/dead-letter-correctors"
+@attribute [Authorize]
 
 <Heading Size="HeadingSize.Is1" Margin="Margin.Is3.FromBottom">Dead Letter Correctors</Heading>
 
