--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/_Imports.razor
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/_Imports.razor
@@ -9,3 +9,5 @@
 
 @using MessageSilo.BlazorApp
 @using Blazorise
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
