--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/App.razor
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/App.razor
@@ -1,14 +1,30 @@
-﻿<Blazorise.ThemeProvider Theme="@theme">
-    <Router AppAssembly="typeof(App).Assembly">
-        <Found Context="routeData">
-            <RouteView RouteData="routeData" DefaultLayout="typeof(MessageSilo.BlazorApp.Layouts.MainLayout)" />
-        </Found>
-        <NotFound>
-            <p>Sorry, there's nothing at this address.</p>
-        </NotFound>
-    </Router>
-    <MessageProvider />
-    <NotificationProvider />
+﻿@using MessageSilo.BlazorApp.Layouts;
+
+<Blazorise.ThemeProvider Theme="@theme">
+    <CascadingAuthenticationState>
+        <Router AppAssembly="typeof(App).Assembly">
+            <Found Context="routeData">
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                    <Authorizing>
+                        <p>Determining session state, please wait...</p>
+                    </Authorizing>
+                    <NotAuthorized>
+                        <h1>Sorry</h1>
+                        <p>You're not authorized to reach this page. You need to log in.</p>
+                    </NotAuthorized>
+                </AuthorizeRouteView>
+                <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            </Found>
+            <NotFound>
+                <PageTitle>Not found</PageTitle>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p role="alert">Sorry, there's nothing at this address.</p>
+                </LayoutView>
+            </NotFound>
+        </Router>
+        <MessageProvider />
+        <NotificationProvider />
+    </CascadingAuthenticationState>
     <PageProgressProvider />
 </Blazorise.ThemeProvider>
 @code {
