dashboard basics, rename connections

--- a/src/MessageSilo.BlazorApp/Components/Layout/SideMenu.razor
+++ b/src/MessageSilo.BlazorApp/Components/Layout/SideMenu.razor
@@ -18,8 +18,8 @@
                 </BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="/dead-letter-correctors">
-                    <BarIcon IconName="IconName.Mail" />
+                <BarLink To="/dashboard">
+                    <BarIcon IconName="IconName.Dashboard" />
                     Dead Letter Correctors
                 </BarLink>
             </BarItem>
