--- a/src/MessageSilo.BlazorApp/Components/Layout/SideMenu.razor
+++ b/src/MessageSilo.BlazorApp/Components/Layout/SideMenu.razor
@@ -20,7 +20,7 @@
             <BarItem>
                 <BarLink To="/dashboard">
                     <BarIcon IconName="IconName.Dashboard" />
-                    Dead Letter Correctors
+                    Dashboard
                 </BarLink>
             </BarItem>
         </BarStart>
