--- a/src/MessageSilo.BlazorApp/Components/Connection/ConnectionGrain.razor
+++ b/src/MessageSilo.BlazorApp/Components/Connection/ConnectionGrain.razor
@@ -1,4 +1,41 @@
-﻿@if (ConnectionSettings is not null)
+﻿@*@if (ConnectionSettings is not null)
 {
-    <Div Background=Background.Light title="@ConnectionSettings.Name" onclick="@(() => Navigation.NavigateTo($"/connection/{ConnectionSettings.Id}"))"></Div>
-}
+    <Div Background=@StatusColor title="@ConnectionSettings.Name" onclick="@(() => Navigation.NavigateTo($"/connection/{ConnectionSettings.Id}"))"></Div>
+}*@
+
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
+<Div Background=Background.Success title="My Test Queue 1"></Div>
