--- a/src/MessageSilo.BlazorApp/Pages/ConnectionPage.razor
+++ b/src/MessageSilo.BlazorApp/Pages/ConnectionPage.razor
@@ -26,7 +26,7 @@
                     <Field Horizontal>
                         <FieldLabel ColumnSize="ColumnSize.Is2">Name</FieldLabel>
                         <FieldBody ColumnSize="ColumnSize.Is10">
-                            <TextEdit Placeholder="My corrector" @bind-Text="@ConnectionSettings.Name">
+                            <TextEdit Placeholder="My corrector" @bind-Text="@ConnectionSettings.RowKey">
                                 <Feedback>
                                     <ValidationError />
                                 </Feedback>
