--- a/MessageSilo.App/MessageSilo.App/Components/Layout/TopMenu.razor
+++ b/MessageSilo.App/MessageSilo.App/Components/Layout/TopMenu.razor
@@ -4,7 +4,7 @@
     <BarBrand>
         <BarItem>
             <BarLink To="">
-                <BarIcon Margin="Margin.Is2.FromEnd" IconName="IconName.Dashboard" />
+                <BarIcon Margin="Margin.Is2.FromEnd" IconName="IconName.Flask" />
                 Message Silo Tester App
             </BarLink>
         </BarItem>
