--- a/MessageSilo.App/MessageSilo.App/_Imports.razor
+++ b/MessageSilo.App/MessageSilo.App/_Imports.razor
@@ -9,3 +9,9 @@
 
 @using MessageSilo.App
 @using Blazorise
+
+@using MessageSilo.App.Components
+@using MessageSilo.Shared.Models
+@using Blazored.LocalStorage
+@using MessageSilo.Shared.Enums
+@using MessageSilo.App.States
