--- a/MessageSilo.App/MessageSilo.App/wwwroot/css/blazor-ui.css
+++ b/MessageSilo.App/MessageSilo.App/wwwroot/css/blazor-ui.css
@@ -26,3 +26,10 @@
 .blazor-error-boundary::after {
     content: "An error has occurred."
 }
+
+code {
+    white-space: pre;
+    padding: 1px;
+    border-width: 1px;
+    background-color: lightgray;
+}
