--- a/MessageSilo.App/MessageSilo.App/Components/CodeBlock.razor
+++ b/MessageSilo.App/MessageSilo.App/Components/CodeBlock.razor
@@ -1,6 +1,8 @@
-﻿<Code CopyToClipboard=true>
-    @ChildContent
-</Code>
+﻿<Div Class="code-block">
+    <Code CopyToClipboard=true>
+        @ChildContent
+    </Code>
+</Div>
 
 @code {
     [Parameter] public RenderFragment ChildContent { get; set; }
