--- a/MessageSilo.App/MessageSilo.App/_Imports.razor
+++ b/MessageSilo.App/MessageSilo.App/_Imports.razor
@@ -9,6 +9,7 @@
 
 @using MessageSilo.App
 @using Blazorise
+@using Blazorise.LoadingIndicator
 
 @using MessageSilo.App.Components
 @using MessageSilo.Shared.Models
