--- a/MessageSilo.App/MessageSilo.App/Pages/Dashboard.razor
+++ b/MessageSilo.App/MessageSilo.App/Pages/Dashboard.razor
@@ -8,7 +8,7 @@
     <Column ColumnSize="ColumnSize.Is5">
         <Row>
             <Column ColumnSize="ColumnSize.Is12">
-                <ConnectionEditor Queue="State?.Queue?.ConnectionSettings"></ConnectionEditor>
+                <ConnectionEditor Queue="State?.Queue?.ConnectionSettings" Dashboard="this"></ConnectionEditor>
             </Column>
         </Row>
         <Row>
@@ -16,7 +16,7 @@
                 <StateHeaxagon State="State?.Queue?.Status" InitializationError="@State?.Queue?.InitializationError"></StateHeaxagon>
             </Column>
             <Column ColumnSize="ColumnSize.Is8">
-                <CodeBlock>@State?.QueueOutput?.Body</CodeBlock>
+                <CodeBlock>@State?.LastMessage?.Input?.Body</CodeBlock>
             </Column>
         </Row>
     </Column>
@@ -48,16 +48,37 @@
                 <StateHeaxagon State="Status.Created"></StateHeaxagon>
             </Column>
             <Column ColumnSize="ColumnSize.Is8">
-                <CodeBlock>@State?.EnricherOutput?.Body</CodeBlock>
+                <CodeBlock>@(State?.LastMessage?.Error != null ? State?.LastMessage?.Error : State?.LastMessage?.Output?.Body)</CodeBlock>
             </Column>
         </Row>
     </Column>
 </Row>
 
 @code {
+    private static System.Timers.Timer timer;
+
     protected override async Task OnInitializedAsync()
     {
         await State.Init();
+        StartTimer();
         await base.OnInitializedAsync();
+    }
+
+    public void StartTimer()
+    {
+        timer = new System.Timers.Timer(1000);
+        timer.Elapsed += TimerElapsed;
+        timer.Enabled = true;
+    }
+
+    public void TimerElapsed(Object source, System.Timers.ElapsedEventArgs e)
+    {
+        InvokeAsync(State.FillOutputs);
+        InvokeAsync(StateHasChanged);
+    }
+
+    public void Refresh()
+    {
+        InvokeAsync(StateHasChanged);
     }
 }
